<resources>
    <string name="app_name">AppProject</string>
    <string name="title_profile">Profile</string>
    <string name="title_main">Main</string>
    <string name="title_settings">Настройки</string>
    <string name="empty_login">Поле Логина не должно быть пустым!</string>
    <string name="empty_password">Поле Пароля не должно быть пустым!</string>
    <string name="something_wrong">Что-то пошло не так</string>
    <string name="success_login">Вы удачно зашли в свой аккаунт</string>
    <string name="success_registration">Регистрация прошла успешно</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="additional_info">Доп информация</string>
    <string name="office_adress">Адрес офиса:</string>
    <string name="age">Возраст:</string>
    <string name="weekdays_hours">Часы работы по будням:</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="weekend_hours">Часы работы по выходным:</string>
    <string name="password_length_error">Пароль должен быть не короче 8 символов и не длиннее 30</string>
    <string name="not_correct_mail_error">Некорректный email</string>
    <string name="not_same_pass">Введённые пароли не совпадают</string>
    <string name="office">Офис</string>
    <string name="enter_office_address">Введите адресс оффиса</string>
    <string name="chapter">Раздел</string>
    <string name="item_description">Описание предмета</string>
    <string name="enter_desc">Введите описание</string>
    <string name="count">Количество</string>
    <string name="enter_count">Введите кол-во</string>
    <string name="upload_photo">Загрузить фотографию предмета</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="add_new_item">Добавление нового предмета</string>
    <string name="enter_pass">Введите ваш пароль</string>
    <string name="registration">Регистрация</string>
    <string name="sing_in">Вход</string>
    <string name="enter_email">Введите вашу почту</string>
    <string name="confirm_your_pass">Подтвердите ваш пароль</string>
    <string name="back_to_login">Вернуться ко входу</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="item_name">Название</string>
    <string name="enter_name_of_item">Введите название</string>
    <string name="now_user">сейчас у:</string>
    <string name="back_item">Освободить предмет</string>
    <string name="color_for_taken_items">Цвет для занятых предметов</string>
    <string name="color_for_free_items">Цвет для свободных предметов</string>
    <string name="error_registration">Ошибка! Проверьте подключение к интернету или попробуйте ввести другую почту</string>
    <string name="error_login">Ошибка! Неверный пароль или логин</string>
    <string name="item_success_deleted">Предмет успешно удалён!</string>
    <string name="error_not_enough_info_for_new_item">Заполните все поля!</string>
    <string name="success_saved_info">Новые данные успешно сохранены!</string>
    <string name="address">Адресс</string>
    <string name="change_photo">Поменять аватар</string>


    <string-array name="chapters">
        <item>техника</item>
        <item>книги</item>
        <item>другие приборы</item>
        <item>прочее</item>
    </string-array>

    <string-array name="colors">
        <item>red</item>
        <item>blue</item>
        <item>gray</item>
    </string-array>
</resources>